# DinPlacer

./: .gitignore  .mcp.json  Indeling 2.dxf  Indeling 3.dxf  Indeling1.dxf  test.DXF  werkelijk.dxf
code/: CMakeLists.txt  CMakePresets.json
code/include/: DXFHandling.hpp  URHandling.hpp  Workplane.hpp  main.hpp  robot_server.hpp  ui.hpp
code/include/ur_rtde/: rtde_control_interface.h  rtde_control_script.h  rtde_export.h  rtde_io_interface.h  rtde_utility.h
code/lib/linux/: librtde.so.1.6.3
code/src/: DXFHandeling.cpp  URHandling.cpp  Workplane.cpp  main.cpp  ui.cpp
